# resell-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
config/watchlists/: livres.yaml
docs/: ARCHITECTURE_SCANNING.md  SWOT.md  TODO.md  activity_log.jsonl  decisions.md
scripts/: import_cal_watchlist.py  seed_mock_db.py  setup_telegram.py  tampermonkey_autobuy.user.js
src/resell_bot/: __init__.py  __main__.py  main.py  priority.py  scheduler.py
src/resell_bot/core/: buyer.py  database.py  discord_notifier.py  email_notifier.py  models.py  notifier.py  price_engine.py
src/resell_bot/scrapers/: _stubs.py  abebooks.py  amazon.py  ammareal.py  base.py  chasseauxlivres.py  ebay.py  fnac.py  momox.py  momox_api.py  rakuten.py  recyclivre.py
src/resell_bot/utils/: crypto.py  http_client.py  isbn.py
src/resell_bot/web/: app.py  auth.py
src/resell_bot/web/templates/: admin.html  alert_detail.html  base.html  books.html  buy_status.html  dashboard.html  settings.html
src/resell_bot/web/templates/partials/: alert_row.html  new_alerts_banner.html  scan_status.html  stats.html
tests/: test_buyer.py  test_database.py  test_isbn.py  test_notifier.py  test_price_engine.py  test_priority.py  test_scheduler.py  test_web.py
tests/test_scrapers/: test_abebooks.py  test_ammareal.py  test_chasseauxlivres.py  test_momox.py  test_momox_api.py  test_recyclivre.py
